# NOAA-file-download

./: .gitignore  Dockerfile  README.md  data_exploration.ipynb  dups_missing_errors.ipynb  pyproject.toml  test.py
orion-dev/: pyproject.toml
orion-dev/src/: flow.py  tasks.py
orion-dev/src/tasks/: tasks_calc.py  tasks_local.py
orion-dev/src_bak/tasks/: __init__.py  tasks_cloud.py
src/: flow.py  flow_all.py  flow_archive.py  noaa_file_download-manifest.json  tasks.py  tasks_calc.py  tasks_cloud.py
src/noaa_file_download/: flow.py
src/noaa_file_download/tasks/: download.py
src/tasks/: __init__.py  calc.py  clean.py  cloud.py  download.py  local.py  tasks_cloud.py  tasks_local.py
