[tool.poetry]
name = "noaa-temp-file-download"
version = "2022.01.24"
description = "Downlads hundreds of thousands of temperature CSV files from NOAA"
authors = ["darrida <darrida.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^1.2.0"
boto3 = "^1.20.41"
tqdm = "^4.62.3"
pandas = "^1.4.0"
icecream = "^2.1.1"
bs4 = "^0.0.1"
requests = "^2.27.1"
loguru = "^0.6.0"
pqdm = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"