[tool.poetry]
name = "src"
version = "2022.05.22"
description = "Downlads hundreds of thousands of temperature CSV files from NOAA"
authors = ["darrida <darrida.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.0b4"
tqdm = "^4.64.0"
pandas = "^1.4.2"
lxml = "^4.8.0"
fs = "^2.4.16"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"